# rnpdno-population-bands

./: .gitignore  AUDIT_PLAN_FINAL.md  CLAUDE.md  CLAUDE_CODE_LISA_TASK.md  CLAUDE_CODE_MANUSCRIPT_DRAFT.md  CLAUDE_CODE_PAPER1_PIPELINE.md  CLAUDE_CODE_PRESUBMISSION.md  CLAUDE_CODE_RERUN_FINAL.md  WP6_REVISION_MEMO.md  main.py  new_paper1_blueprint.md  paper1_merge_blueprint.md  pyproject.toml  scrape_rnpdno_single_status.py  summary_scripts.md
archive/: claude_code_instructions_18mar2026.md  claude_paper.md
audit/: .~lock.rnpdno_disappeared_not_located.csv#  WP1_data_integrity.md  WP2_numeric_audit.md  WP3_methodological_audit.md  WP4_reference_audit.md  WP5_discussion_factcheck.md  WP6_conclusion_cheatsheet.md  claim_ledger.csv  revision_memo.md  rnpdno_disappeared_not_located.csv  rnpdno_located_alive.csv  rnpdno_located_dead.csv  rnpdno_total.csv
logs/: rerun_2026-04-06.md
manuscript/: dib.tex  main.dvi  main.tex  main_annual_pipeline_backup.tex  references.bib
reports/: findings_summary.md
scripts/: 01_build_master_panel.py  02_analyze_divergence.py  03_annual_rates.py  04_annual_lisa.py  05_centroid_trajectory.py  06_test_shift_significance.py  07_bajio_regional_clusters.py  08_full_analysis.py  09_publication_figures.py  10_build_monthly_panel.py  11_build_spatial_weights.py  12_compute_lisa_monthly.py  13_compute_concentration.py  14_generate_figures.py  14_generate_figures.py.bak  15_generate_tables.py  16_vawri_validation.py  run_pipeline.py
scripts_alpha/: 00_build_alpha_panel.py  10_build_band_denom.py  20_sex_composition.py  23_band_rates.py  (+6 more)
(+157 files in other folders)
